src/test/rustdoc-ui/doc-alias-assoc-const.stderr
error: `#[doc(alias = "...")]` isn't allowed on associated constant in trait implementation block
  --> $DIR/doc-alias-assoc-const.rs:11:11
   |
LL |     #[doc(alias = "CONST_BAZ")]
   |           ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

